// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> should render 1`] = `
<div>
  <label
    class="sc-ejfMa-d fzTHSO"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-sLsrZ kGdGKi sc-kRRyDe kuvsZs"
  >
    <input
      class="sc-dBmzty djgFPK"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value=""
    />
  </div>
  <p
    class="sc-knuQbY dYalWS"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-ERObt keWFwj"
    >
      Consultez
       
      <button
        class="sc-kOPcWz cOwJar sc-dNsVcS HzAHT"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should show no results when no result 1`] = `
<div>
  <label
    class="sc-ejfMa-d fzTHSO"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-sLsrZ kGdGKi sc-kRRyDe kuvsZs"
  >
    <input
      class="sc-dBmzty djgFPK"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="9999"
    />
  </div>
  <div
    class="sc-fulCBj kKXZgG"
  >
    <p
      class="sc-krNlru bpribs"
    >
      Aucun résultat n’a été trouvé.
    </p>
  </div>
  <p
    class="sc-knuQbY dYalWS"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-ERObt keWFwj"
    >
      Consultez
       
      <button
        class="sc-kOPcWz cOwJar sc-dNsVcS HzAHT"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should show spinner when loading 1`] = `
<div>
  <label
    class="sc-ejfMa-d fzTHSO"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-sLsrZ kGdGKi sc-kRRyDe kuvsZs"
  >
    <input
      class="sc-dBmzty djgFPK"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="8888"
    />
  </div>
  <div
    class="sc-fulCBj kKXZgG"
  >
    <p
      class="sc-krNlru bpribs"
    >
      <svg
        aria-labelledby="title desc"
        class="__react-svg-spinner_circle"
        height="1em"
        role="img"
        style="animation-duration: 750ms;"
        viewBox="0 0 32 32"
        width="1em"
      >
        <title
          id="title"
        >
          Circle loading spinner
        </title>
        <desc
          id="desc"
        >
          Image of a partial circle indicating "loading."
        </desc>
        <style>
          
      .__react-svg-spinner_circle{
          transition-property: transform;
          animation-name: __react-svg-spinner_infinite-spin;
          animation-iteration-count: infinite;
          animation-timing-function: linear;
      }
      @keyframes __react-svg-spinner_infinite-spin {
          from {transform: rotate(0deg)}
          to {transform: rotate(360deg)}
      }
    
        </style>
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="12"
          role="presentation"
          stroke="rgba(0,0,0,0.4)"
          stroke-dasharray="43.982297150257104"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
       Recherche des convention collectives...
    </p>
  </div>
  <p
    class="sc-knuQbY dYalWS"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-ERObt keWFwj"
    >
      Consultez
       
      <button
        class="sc-kOPcWz cOwJar sc-dNsVcS HzAHT"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when input is IDCC, should search conventions 1`] = `
<div>
  <label
    class="sc-ejfMa-d fzTHSO"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-sLsrZ kGdGKi sc-kRRyDe kuvsZs"
  >
    <input
      class="sc-dBmzty djgFPK"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="1234"
    />
  </div>
  <div
    class="sc-fulCBj kKXZgG"
  >
    <div
      class="sc-iGgWBj sc-dxcDKg cRLRjd gmmTyn"
    >
      <h3
        class="sc-kAyceB dvmaTz"
      >
        CONVENTIONS COLLECTIVES (2
         
        résultats)
      </h3>
      <ul
        class="sc-cfxfcM kMmTaI"
      >
        <li
          class="sc-gvZAcH HguCA"
        >
          <a
            class="sc-ktPPKK gFXKwY"
            href="/convention-collective/275-small-titre"
          >
            small titre
             
            <span
              class="sc-YysOf dlCRaO"
            >
              (IDCC 
              0275
              )
            </span>
          </a>
        </li>
        <li
          class="sc-gvZAcH HguCA"
        >
          <a
            class="sc-ktPPKK jRORIu"
            href="/convention-collective/276-smaller-convention-2"
          >
            smaller convention 2
             
            <span
              class="sc-YysOf dlCRaO"
            >
              (IDCC 
              0276
              )
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-knuQbY dYalWS"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-ERObt keWFwj"
    >
      Consultez
       
      <button
        class="sc-kOPcWz cOwJar sc-dNsVcS HzAHT"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when input is a valid IDCC, should show only the perfect match 1`] = `
<div>
  <label
    class="sc-ejfMa-d fzTHSO"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-sLsrZ kGdGKi sc-kRRyDe kuvsZs"
  >
    <input
      class="sc-dBmzty djgFPK"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="4567"
    />
  </div>
  <div
    class="sc-fulCBj kKXZgG"
  >
    <div
      class="sc-iGgWBj sc-dxcDKg cRLRjd gmmTyn"
    >
      <h3
        class="sc-kAyceB dvmaTz"
      >
        CONVENTIONS COLLECTIVES (1
         
        résultat)
      </h3>
      <ul
        class="sc-cfxfcM kMmTaI"
      >
        <li
          class="sc-gvZAcH HguCA"
        >
          <a
            class="sc-ktPPKK gFXKwY"
            href="/convention-collective/4567-smaller-convention-2"
          >
            smaller convention 2
             
            <span
              class="sc-YysOf dlCRaO"
            >
              (IDCC 
              4567
              )
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-knuQbY dYalWS"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-ERObt keWFwj"
    >
      Consultez
       
      <button
        class="sc-kOPcWz cOwJar sc-dNsVcS HzAHT"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when searching by text, should use enterprise API 1`] = `
<div>
  <label
    class="sc-ejfMa-d fzTHSO"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-sLsrZ kGdGKi sc-kRRyDe kuvsZs"
  >
    <input
      class="sc-dBmzty djgFPK"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="hello"
    />
  </div>
  <div
    class="sc-fulCBj kKXZgG"
  >
    <p
      class="sc-krNlru bpribs"
    >
      Le service de recherche est indisponible.
    </p>
  </div>
  <p
    class="sc-knuQbY dYalWS"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-ERObt keWFwj"
    >
      Consultez
       
      <button
        class="sc-kOPcWz cOwJar sc-dNsVcS HzAHT"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;
